fix: replace tag p by tag div

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <bx-dropdown id="vars", label-text="Variables" value=""></bx-dropdown>
         </div>
         <div class="bx--col">
-            <p id="count"></p> 
+            <div id="count"></div> 
          <py-script>
              from pyodide import create_proxy
              import pandas as pd
