fix: remove pyscript.css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Carbon with Pyscript</title>
 <meta charset="UTF-8" />
-<link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css"/>
+<!-- <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css"/> -->
 <link rel="stylesheet" href="https://1.www.s81c.com/common/carbon-for-ibm-dotcom/tag/v1/latest/grid.css"/>
 <link rel="stylesheet" href="https://unpkg.com/@carbon/charts/styles.css" />
 <script defer src="https://pyscript.net/latest/pyscript.js"></script>
@@ -14,7 +14,11 @@
 <script src="https://unpkg.com/@carbon/charts/dist/umd/bundle.umd.js"></script>
 <style>
     bx-header:not(:defined) {
-      display: none;
+        display: none;
+    }
+
+    py-script:not(:defined) {
+        display: none;
     }
   </style>
   <py-config>
